moved dn buy credits button

--- a/BeingSeenApp/app/src/main/res/layout/fragment_dn_user_profile.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_dn_user_profile.xml
@@ -35,19 +35,22 @@
 
     <Button
         android:id="@+id/dnPurchaseCurrency"
-        android:layout_width="88dp"
-        android:layout_height="wrap_content"
+        android:layout_width="126dp"
+        android:layout_height="33dp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="62dp"
+        android:background="#0000"
         android:text="Buy Credits"
+        android:textColor="#0000FF"
         android:textSize="12dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.02"
+        app:layout_constraintHorizontal_bias="0.7"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.00001" />
-    
+        app:layout_constraintVertical_bias="0.72" />
+
 <!--     <TextView
         android:id="@+id/DnPfUnameDisplay"
         android:layout_width="wrap_content"
