right align text for request details

--- a/BeingSeenApp/app/src/main/res/layout/activity_request_details.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_request_details.xml
@@ -27,6 +27,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="5dp"
             app:layout_constraintVertical_bias="0.22000003">
 
             <TextView
@@ -54,7 +55,8 @@
                 android:text="Receiver"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/black"
-                android:textSize="26dp" />
+                android:textSize="26dp"
+                android:gravity="right"/>
 
             <TextView
                 android:id="@+id/rq_detail_email"
@@ -95,7 +97,8 @@
                 android:text="Amount"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/black"
-                android:textSize="26dp" />
+                android:textSize="26dp"
+                android:gravity="right"/>
 
             <TextView
                 android:id="@+id/rq_detail_status"
@@ -123,7 +126,8 @@
                 android:text="Status"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/black"
-                android:textSize="26dp" />
+                android:textSize="26dp"
+                android:gravity="right"/>
 
             <TextView
                 android:id="@+id/rq_detail_email_field"
@@ -131,14 +135,15 @@
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/rq_detail_email"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="20dp"
                 android:layout_toEndOf="@+id/rq_detail_email"
                 android:text="Email"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/black"
-                android:textSize="20dp" />
+                android:textSize="26dp"
+                android:gravity="right"/>
         </RelativeLayout>
 
         <Button
