--- a/BeingSeenApp/app/src/main/res/layout/activity_request_details.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_request_details.xml
@@ -27,7 +27,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="15dp"
             app:layout_constraintVertical_bias="0.22000003">
 
             <TextView
@@ -52,11 +52,11 @@
                 android:layout_marginTop="38dp"
                 android:layout_marginEnd="0dp"
                 android:layout_toEndOf="@+id/rq_detail_receiver"
+                android:gravity="right"
                 android:text="Receiver"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/black"
-                android:textSize="26dp"
-                android:gravity="right"/>
+                android:textSize="24dp" />
 
             <TextView
                 android:id="@+id/rq_detail_email"
@@ -90,15 +90,15 @@
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/rq_detail_amount"
                 android:layout_alignEnd="@+id/rq_detail_email_field"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="3dp"
+                android:layout_marginStart="7dp"
+                android:layout_marginTop="7dp"
                 android:layout_marginEnd="0dp"
                 android:layout_toEndOf="@+id/rq_detail_amount"
+                android:gravity="right"
                 android:text="Amount"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/black"
-                android:textSize="26dp"
-                android:gravity="right"/>
+                android:textSize="24dp" />
 
             <TextView
                 android:id="@+id/rq_detail_status"
@@ -118,16 +118,16 @@
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/rq_detail_status"
                 android:layout_alignEnd="@+id/rq_detail_amount_field"
-                android:layout_marginStart="17dp"
-                android:layout_marginTop="3dp"
-                android:layout_marginEnd="0dp"
+                android:layout_marginStart="18dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="-2dp"
                 android:layout_toEndOf="@+id/rq_detail_status"
                 android:background="#00FFFFFF"
+                android:gravity="right"
                 android:text="Status"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/black"
-                android:textSize="26dp"
-                android:gravity="right"/>
+                android:textSize="24dp" />
 
             <TextView
                 android:id="@+id/rq_detail_email_field"
@@ -139,11 +139,11 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="20dp"
                 android:layout_toEndOf="@+id/rq_detail_email"
+                android:gravity="right"
                 android:text="Email"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/black"
-                android:textSize="26dp"
-                android:gravity="right"/>
+                android:textSize="24dp" />
         </RelativeLayout>
 
         <Button
