Improved UI in ViewDonationGoal and merchantRequest
^^

--- a/BeingSeenApp/app/src/main/res/layout/fragment_mer_request_history.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_mer_request_history.xml
@@ -10,7 +10,8 @@
         android:id="@+id/req_hist_txt"
         android:layout_width="349dp"
         android:layout_height="72dp"
-        android:text="Request History"
+        android:text="Request History:"
+        android:textColor="@color/green"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,6 +26,7 @@
         android:layout_height="568dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:background="#DDEEDF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
