--- a/BeingSeenApp/app/src/main/res/layout/request_history_recycler_item.xml
+++ b/BeingSeenApp/app/src/main/res/layout/request_history_recycler_item.xml
@@ -8,54 +8,53 @@ card_view:cardUseCompatPadding="true"
 card_view:cardElevation="3dp"
 card_view:cardCornerRadius="3dp">
 
-<RelativeLayout
-    android:layout_width="wrap_content"
-    android:layout_height="105dp"
-    android:padding="16dp"
-    >
-
-    <TextView
-        android:id="@+id/amountTag"
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginStart="0dp"
-        android:text="Amount:"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
+        android:layout_height="105dp"
+        android:padding="16dp">
 
-    <TextView
-        android:id="@+id/merAmount"
-        android:layout_width="395dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="0dp"
-        android:layout_toRightOf="@id/amountTag"
-        android:text="amount"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/amountTag"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginStart="0dp"
+            android:text="Amount:"
+            android:textColor="@color/green"
+            android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/statusTag"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_below="@id/amountTag"
-        android:layout_marginStart="0dp"
-        android:text="Status:"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/merAmount"
+            android:layout_width="395dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="0dp"
+            android:layout_toRightOf="@id/amountTag"
+            android:text="amount"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/merStatus"
-        android:layout_width="395dp"
-        android:layout_height="40dp"
-        android:layout_below="@id/merAmount"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="0dp"
-        android:layout_toRightOf="@id/statusTag"
-        android:text="status"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/statusTag"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_below="@id/amountTag"
+            android:layout_marginStart="0dp"
+            android:text="Status:"
+            android:textColor="@color/green"
+            android:textSize="20sp" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/merStatus"
+            android:layout_width="395dp"
+            android:layout_height="40dp"
+            android:layout_below="@id/merAmount"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="0dp"
+            android:layout_toRightOf="@id/statusTag"
+            android:text="status"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
