--- a/BeingSeenApp/app/src/main/res/layout/fragment_transaction_history.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_transaction_history.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".TransactionHistory.TransactionHistoryFragment">
 
-
     <TextView
         android:id="@+id/transaction_history_txt"
         android:layout_width="304dp"
         android:layout_height="63dp"
         android:text="Transaction History"
         android:textSize="32sp"
+        android:textColor="@color/purple_200"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.111"
