--- a/BeingSeenApp/app/src/main/res/layout/transactions_recycler_item.xml
+++ b/BeingSeenApp/app/src/main/res/layout/transactions_recycler_item.xml
@@ -32,7 +32,8 @@
             android:layout_width="144dp"
             android:layout_height="71dp"
             android:text="TextView"
-            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:textSize="18sp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="20dp"
             android:layout_gravity="right"/>
@@ -42,8 +43,8 @@
             android:layout_width="155dp"
             android:layout_height="65dp"
             android:text="TextView"
-            android:textColor="#03A9F4"
-            android:textSize="24sp"
+            android:textColor="@color/purple_200"
+            android:textSize="25sp"
             android:layout_marginTop="5dp"
             android:layout_marginStart="20dp"
             android:layout_gravity="left"/>
@@ -54,7 +55,7 @@
             android:layout_height="61dp"
             android:text="TextView"
             android:layout_marginTop="5dp"
-            android:textAlignment="center"
+            android:layout_marginRight="10dp"
             android:textSize="16sp" />
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
