--- a/BeingSeenApp/app/src/main/res/layout/activity_request_details.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_request_details.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView"
         android:layout_width="411dp"
         android:layout_height="641dp"
-        android:background="@drawable/testbg4"
+        android:background="@drawable/testbg5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -27,6 +27,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="25dp"
             app:layout_constraintVertical_bias="0.22000003">
 
             <TextView
@@ -48,13 +49,14 @@
                 android:layout_alignEnd="@+id/rq_detail_email_field"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="38dp"
                 android:layout_marginEnd="0dp"
                 android:layout_toEndOf="@+id/rq_detail_receiver"
+                android:gravity="right"
                 android:text="Receiver"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/black"
-                android:textSize="30dp" />
+                android:textSize="20dp" />
 
             <TextView
                 android:id="@+id/rq_detail_email"
@@ -88,14 +90,15 @@
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/rq_detail_amount"
                 android:layout_alignEnd="@+id/rq_detail_email_field"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="0dp"
+                android:layout_marginStart="7dp"
+                android:layout_marginTop="7dp"
                 android:layout_marginEnd="0dp"
                 android:layout_toEndOf="@+id/rq_detail_amount"
+                android:gravity="right"
                 android:text="Amount"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/black"
-                android:textSize="30dp" />
+                android:textSize="20dp" />
 
             <TextView
                 android:id="@+id/rq_detail_status"
@@ -115,15 +118,16 @@
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/rq_detail_status"
                 android:layout_alignEnd="@+id/rq_detail_amount_field"
-                android:layout_marginStart="17dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginEnd="0dp"
+                android:layout_marginStart="18dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="-2dp"
                 android:layout_toEndOf="@+id/rq_detail_status"
                 android:background="#00FFFFFF"
+                android:gravity="right"
                 android:text="Status"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/black"
-                android:textSize="30dp" />
+                android:textSize="20dp" />
 
             <TextView
                 android:id="@+id/rq_detail_email_field"
@@ -131,14 +135,15 @@
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/rq_detail_email"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="20dp"
                 android:layout_toEndOf="@+id/rq_detail_email"
+                android:gravity="right"
                 android:text="Email"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/black"
-                android:textSize="30dp" />
+                android:textSize="20dp" />
         </RelativeLayout>
 
         <Button
@@ -146,7 +151,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:foregroundTint="@color/bg_green"
-            android:text="Change Status"
+            android:text="Mark As Done"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:icon="@android:drawable/ic_menu_edit"
             app:iconPadding="2dp"
