--- a/BeingSeenApp/app/src/main/res/layout/content_recycler_item.xml
+++ b/BeingSeenApp/app/src/main/res/layout/content_recycler_item.xml
@@ -11,14 +11,13 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="190dp"
-        android:padding="16dp"
-        android:background="@drawable/pf_info_border"
+        android:layout_height="200dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        >
+        android:background="@drawable/pf_info_border"
+        android:padding="16dp">
 
         <TextView
             android:id="@+id/nameTag"
@@ -63,41 +62,49 @@
             android:textColor="@color/black"
             android:textSize="20sp" />
 
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_width="395dp"
-            android:layout_height="30dp"
-            android:layout_below="@id/goalTitle"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="5dp"
-            android:layout_toRightOf="@id/progress"
-
-            android:progressTint="@color/green" />
-
-        <TextView
-            android:id="@+id/progress"
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/goalTitle"
+            android:layout_height="95dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="8dp"
-            android:text="progress"
-            android:textColor="@color/black"
-            android:textSize="15sp" />
+            android:layout_marginTop="78dp"
+            android:background="@drawable/pf_info_border"
+            android:padding="16dp">
 
-        <TextView
-            android:id="@+id/gDescription"
-            android:layout_width="395dp"
-            android:layout_height="50dp"
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_width="261dp"
+                android:layout_height="31dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="5dp"
 
-            android:layout_below="@+id/progressBar"
+                android:layout_toRightOf="@id/progress"
+                android:progressTint="@color/green" />
 
+            <TextView
+                android:id="@+id/progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="8dp"
+                android:text="progress"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
-            android:text="description"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
+            <TextView
+                android:id="@+id/gDescription"
+                android:layout_width="395dp"
+                android:layout_height="50dp"
+                android:layout_below="@+id/progressBar"
+                android:text="description"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
