--- a/BeingSeenApp/app/src/main/res/layout/fragment_donation_goal.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_donation_goal.xml
@@ -44,16 +44,16 @@
 
 
         <RelativeLayout
-            android:layout_width="351dp"
-            android:layout_height="541dp"
+            android:layout_width="wrap_content"
+            android:layout_height="537dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="152dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="38dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="84dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="7dp"
             android:background="@drawable/pf_info_border"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -77,16 +77,16 @@
                 app:lottie_rawRes="@raw/havent_set_up_donation_goal_animation" />
             <TextView
                 android:id="@+id/HyUsername"
-                android:layout_width="301dp"
-                android:layout_height="35dp"
+                android:layout_width="280dp"
+                android:layout_height="47dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="17dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginBottom="409dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="19dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="472dp"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="bold"
@@ -94,16 +94,16 @@
 
             <TextView
                 android:id="@+id/HyGoalTitle"
-                android:layout_width="303dp"
-                android:layout_height="48dp"
+                android:layout_width="wrap_content"
+                android:layout_height="66dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginEnd="23dp"
-                android:layout_marginBottom="363dp"
+                android:layout_marginStart="26dp"
+                android:layout_marginTop="72dp"
+                android:layout_marginEnd="26dp"
+                android:layout_marginBottom="400dp"
                 android:textColor="@color/black"
                 android:textSize="25dp"
                 android:textStyle="bold"
@@ -111,34 +111,34 @@
 
 
             <TextView
-                android:id="@+id/HyAmount"
-                android:layout_width="136dp"
-                android:layout_height="40dp"
+                android:id="@+id/HyPercentage"
+                android:layout_width="wrap_content"
+                android:layout_height="44dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="23dp"
-                android:layout_marginTop="110dp"
-                android:layout_marginEnd="192dp"
-                android:layout_marginBottom="301dp"
+                android:layout_marginStart="191dp"
+                android:layout_marginTop="158dp"
+                android:layout_marginEnd="25dp"
+                android:layout_marginBottom="336dp"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 app:layout_constraintVertical_bias="0.132" />
 
             <TextView
-                android:id="@+id/HyPercentage"
-                android:layout_width="139dp"
-                android:layout_height="40dp"
+                android:id="@+id/HyAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="44dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="190dp"
-                android:layout_marginTop="110dp"
-                android:layout_marginEnd="22dp"
-                android:layout_marginBottom="299dp"
+                android:layout_marginStart="26dp"
+                android:layout_marginTop="159dp"
+                android:layout_marginEnd="180dp"
+                android:layout_marginBottom="335dp"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20dp"
@@ -146,35 +146,51 @@
 
             <TextView
                 android:id="@+id/HyGoalDescription"
-                android:layout_width="wrap_content"
-                android:layout_height="265dp"
+                android:layout_width="280dp"
+                android:layout_height="280dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="163dp"
-                android:layout_marginEnd="23dp"
-                android:layout_marginBottom="23dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="224dp"
+                android:layout_marginEnd="19dp"
+                android:layout_marginBottom="21dp"
+                android:shadowColor="@color/black"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:typeface="normal" />
-
 
             <ProgressBar
                 android:id="@+id/HyProgressBar"
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_height="36dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="90dp"
-                android:layout_marginEnd="33dp"
-                android:layout_marginBottom="350dp"
+                android:layout_marginStart="26dp"
+                android:layout_marginTop="122dp"
+                android:layout_marginEnd="25dp"
+                android:layout_marginBottom="380dp"
                 app:layout_constraintVertical_bias="0.019" />
+
+            <TextView
+                android:id="@+id/HyGoalDescriptionBackground"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/HyGoalDescription"
+                android:layout_alignTop="@+id/HyGoalDescription"
+                android:layout_alignEnd="@+id/HyGoalDescription"
+                android:layout_alignBottom="@+id/HyGoalDescription"
+                android:layout_marginStart="-8dp"
+                android:layout_marginTop="-15dp"
+                android:layout_marginEnd="-7dp"
+                android:layout_marginBottom="0dp"
+                android:background="@color/common_google_signin_btn_text_dark_disabled"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
         </RelativeLayout>
     </RelativeLayout>
